[package]
name = "richoin"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
async-std = "1.11.0"
async-executor = "1.4.1"
futures = "0.3.21"
futures-lite = "1.12.0"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.57"
